chore: update Wuchale

--- a/src/locales/de.po
+++ b/src/locales/de.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-09-10T18:43:43.303Z\n"
-"PO-Revision-Date: 2025-09-21T11:10:12.513Z\n"
+"PO-Revision-Date: 2025-09-21T17:03:06.381Z\n"
 "Last-Translator: \n"
 "Language: de\n"
 "Language-Team: \n"
@@ -307,6 +307,8 @@ msgstr "Profilbild <0/>"
 msgid "Selected file:"
 msgstr "Ausgewählte Datei:"
 
+#. placeholder {0}: file.name
+#. placeholder {1}: file.size
 #: src/lib/auth/UserDetailsForm.svelte
 msgid "{0} ({1} bytes)"
 msgstr "{0} ({1} Bytes)"
@@ -355,6 +357,7 @@ msgstr "Daten pro Liga"
 msgid "A single team can be associated to several leagues per season in BSM."
 msgstr "Ein einzelnes Team kann in BSM pro Saison mehreren Ligen zugeordnet werden."
 
+#. placeholder {0}: favoriteTeam?.team.name
 #: src/routes/favorite/+page.svelte
 msgid "The team \"{0}\" does not have a league entry in this league."
 msgstr "Das Team \"{0}\" hat keinen Ligaeintrag in dieser Liga."
@@ -404,6 +407,7 @@ msgstr "Keine Daten gefunden."
 msgid "Loading..."
 msgstr "Laden..."
 
+#. placeholder {0}: error.message
 #: src/routes/favorite/+page.svelte
 msgid "Error: {0}"
 msgstr "Fehler: {0}"
@@ -425,6 +429,9 @@ msgstr "Externe Spiele anzeigen"
 msgid "Loading matches..."
 msgstr "Lade Spiele..."
 
+#. placeholder {0}: error.message
+#. placeholder {0}: error.message
+#. placeholder {0}: error.message
 #: src/lib/components/forms/TeamGamesModal.svelte
 #: src/lib/components/match/CurrentMatchBlock.svelte
 #: src/routes/ligen/[id]/stats/+page.svelte
@@ -440,6 +447,20 @@ msgstr "Ligen"
 msgid "Loading Leagues..."
 msgstr "Ligen werden geladen..."
 
+#. placeholder {0}: error.message
+#. placeholder {0}: error.message
+#. placeholder {0}: error.message
+#. placeholder {0}: error.message
+#. placeholder {0}: error.message
+#. placeholder {0}: error.message
+#. placeholder {0}: error.message
+#. placeholder {0}: error.message
+#. placeholder {0}: error.message
+#. placeholder {0}: error.message
+#. placeholder {0}: error.message
+#. placeholder {0}: error.message
+#. placeholder {0}: error.message
+#. placeholder {0}: error.message
 #: src/routes/teams/+page.svelte
 #: src/routes/ligen/+page.svelte
 #: src/routes/club/ballpark/+page.svelte
@@ -540,6 +561,7 @@ msgstr "Wichtig"
 msgid "Critical"
 msgstr "Kritisch"
 
+#. placeholder {0}: teamName
 #: src/lib/components/boxscore/MatchBoxscoreOffensiveTable.svelte
 msgid "{0} (Batters)"
 msgstr "{0} (Schlagleute)"
@@ -643,6 +665,7 @@ msgstr "TP:"
 msgid "No announcements available."
 msgstr "Keine Ankündigungen verfügbar."
 
+#. placeholder {0}: teamName
 #: src/lib/components/boxscore/MatchBoxscorePitchingTable.svelte
 msgid "{0} (Pitchers)"
 msgstr "{0} (Pitcher)"
@@ -989,6 +1012,8 @@ msgstr "<0/> Zum Admin machen"
 msgid "<0/> Remove"
 msgstr "<0/> Entfernen"
 
+#. placeholder {0}: row.first_name + " " + row.last_name
+#. placeholder {1}: team.name
 #: src/lib/components/datatable/TeamMembersTableContent.svelte
 msgid "Are you sure you wish to remove \"{0}\" from \"{1}\"?"
 msgstr "Bist du sicher, dass du \"{0}\" von \"{1}\" entfernen möchtest?"
@@ -1031,10 +1056,12 @@ msgstr "Playoff-Serie anzeigen"
 msgid "Playoff Series"
 msgstr "Playoff-Serie"
 
+#. placeholder {0}: playoffSeries.leading_team.name
 #: src/lib/components/favorite/PlayoffSheet.svelte
 msgid "{0} lead series"
 msgstr "{0} führt Serie an"
 
+#. placeholder {0}: playoffSeries.leading_team.name
 #: src/lib/components/favorite/PlayoffSheet.svelte
 msgid "{0} win series"
 msgstr "{0} gewinnt Serie"
@@ -1043,6 +1070,7 @@ msgstr "{0} gewinnt Serie"
 msgid "Series tied"
 msgstr "Serie unentschieden"
 
+#. placeholder {0}: playoffSeries.series_length
 #: src/lib/components/favorite/PlayoffSheet.svelte
 msgid "Length of series: Best of {0}"
 msgstr "Länge der Serie: Best of {0}"
@@ -1105,6 +1133,7 @@ msgstr "Ankündigung bearbeiten"
 msgid "Create new"
 msgstr "Neu erstellen"
 
+#. placeholder {0}: form?.title
 #: src/lib/components/forms/AnnouncementForm.svelte
 msgid "Edit Announcement \"{0}\""
 msgstr "Ankündigung \"{0}\" bearbeiten"
@@ -1182,6 +1211,7 @@ msgstr "Verein bearbeiten"
 msgid "Create a Club"
 msgstr "Einen Verein erstellen"
 
+#. placeholder {0}: form?.name
 #: src/lib/components/forms/ClubForm.svelte
 msgid "Edit Club \"{0}\""
 msgstr "Verein \"{0}\" bearbeiten"
@@ -1235,6 +1265,7 @@ msgstr "Es ist nicht möglich, den letzten Administrator aus einem Verein zu ent
 msgid "Location"
 msgstr "Ort"
 
+#. placeholder {0}: form?.address_addon ?? form?.internal_name
 #: src/lib/components/forms/LocationForm.svelte
 msgid "Edit Location \"{0}\""
 msgstr "Ort \"{0}\" bearbeiten"
@@ -1324,10 +1355,12 @@ msgstr "Status <0><0>Teilnahme</0> <1>Vielleicht</1> <2>Keine Teilnahme</2></0>"
 msgid "Event Series"
 msgstr "Ereignisserie"
 
+#. placeholder {0}: eventSeries.title
 #: src/lib/components/forms/EventSeriesForm.svelte
 msgid "Edit Event Series \"{0}\""
 msgstr "Ereignisserie \"{0}\" bearbeiten"
 
+#. placeholder {0}: team.name
 #: src/lib/components/forms/EventSeriesForm.svelte
 msgid "Create new Event Series for {0}"
 msgstr "Neue Ereignisserie für {0} erstellen"
@@ -1382,6 +1415,7 @@ msgstr "Ort <0>Kein</0>"
 msgid "Event"
 msgstr "Ereignis"
 
+#. placeholder {0}: form?.title
 #: src/lib/components/forms/EventForm.svelte
 msgid "Edit Event \"{0}\""
 msgstr "Ereignis \"{0}\" bearbeiten"
@@ -1430,6 +1464,7 @@ msgstr "Spielerdaten"
 msgid "Edit Player Data"
 msgstr "Spielerdaten bearbeiten"
 
+#. placeholder {0}: `${authRecord.first_name} ${authRecord.last_name}`
 #: src/lib/components/forms/PlayerDataForm.svelte
 msgid "Edit Player Data for \"{0}\""
 msgstr "Spielerdaten für \"{0}\" bearbeiten"
@@ -1489,6 +1524,7 @@ msgstr "Team"
 msgid "Edit Team"
 msgstr "Team bearbeiten"
 
+#. placeholder {0}: form?.name
 #: src/lib/components/forms/TeamForm.svelte
 msgid "Edit Team \"{0}\""
 msgstr "Team \"{0}\" bearbeiten"
@@ -1839,10 +1875,12 @@ msgstr "Spieler-Fallback"
 msgid "Add Members"
 msgstr "Mitglieder hinzufügen"
 
+#. placeholder {0}: team.name
 #: src/lib/components/team/TeamAddMemberButton.svelte
 msgid "Add Members to team \"{0}\""
 msgstr "Mitglieder zum Team \"{0}\" hinzufügen"
 
+#. placeholder {0}: club.name
 #: src/lib/components/team/TeamAddMemberButton.svelte
 msgid "Select all {0} members that should be added to the team."
 msgstr "Alle {0} Mitglieder auswählen, die dem Team hinzugefügt werden sollen."
@@ -1871,6 +1909,7 @@ msgstr "LINK"
 msgid "Antritt außer Konkurrenz (aK):"
 msgstr "Antritt außer Konkurrenz (aK):"
 
+#. placeholder {0}: modelName
 #: src/lib/components/utility/DeleteButton.svelte
 msgid "Are you sure you wish to delete this {0}? In most cases, data cannot be recovered after deletion. Please be certain."
 msgstr "Möchtest du dieses {0} wirklich löschen? In den meisten Fällen können Daten nach dem Löschen nicht wiederhergestellt werden. Bitte sei sicher."
@@ -1923,10 +1962,12 @@ msgstr "Gespielte Innings"
 msgid "Fielding Average"
 msgstr "Feldquote"
 
+#. placeholder {0}: itemName
 #: src/lib/components/utility/MultiSelectCombobox.svelte
 msgid "You cannot remove the last {0}!"
 msgstr "Du kannst das letzte {0} nicht entfernen!"
 
+#. placeholder {0}: itemName
 #: src/lib/components/utility/MultiSelectCombobox.svelte
 msgid "Select to add as {0}:"
 msgstr "Auswählen, um als {0} hinzuzufügen:"
@@ -2011,6 +2052,8 @@ msgstr "Vereinsfunktionäre"
 msgid "Loading Club Officials..."
 msgstr "Lade Vereinsfunktionäre..."
 
+#. placeholder {0}: batting.person?.first_name
+#. placeholder {1}: batting.person?.last_name
 #: src/routes/players/[id]/+page.svelte
 msgid "Player Profile for {0} {1}"
 msgstr "Spielerprofil für {0} {1}"
@@ -2019,6 +2062,7 @@ msgstr "Spielerprofil für {0} {1}"
 msgid "Profile Data"
 msgstr "Profildaten"
 
+#. placeholder {0}: error.message
 #: src/routes/players/[id]/+page.svelte
 msgid "An error occurred fetching player data: {0}.<0/> The data source might be temporarily unavailable, please try again later."
 msgstr "Beim Abrufen der Spielerdaten ist ein Fehler aufgetreten: {0}.<0/> Die Datenquelle ist möglicherweise vorübergehend nicht verfügbar, bitte versuche es später noch einmal."
@@ -2032,6 +2076,7 @@ msgstr "Statistiken"
 msgid "Umpire Licenses"
 msgstr "Schiedsrichterlizenzen"
 
+#. placeholder {0}: data.teamName ?? "Team"
 #: src/routes/league_entries/[entry]/+page.svelte
 msgid "Stats for {0}"
 msgstr "Statistiken für {0}"
@@ -2081,6 +2126,8 @@ msgstr "Sitzplätze"
 msgid "No ballparks found."
 msgstr "Keine Ballparks gefunden."
 
+#. placeholder {0}: clubTeam.team.name
+#. placeholder {1}: clubTeam.team.season
 #: src/routes/teams/[id]/+page.svelte
 msgid "{0} (Saison {1})"
 msgstr "{0} (Saison {1})"
@@ -2131,6 +2178,7 @@ msgstr "Keine Baseball-Lizenzen verfügbar."
 msgid "No softball licenses available."
 msgstr "Keine Softball-Lizenzen verfügbar."
 
+#. placeholder {0}: level
 #: src/lib/components/club/licenses/LicenseLevelIndicator.svelte
 msgid "License level {0}:"
 msgstr "Lizenzstufe {0}:"
@@ -2222,6 +2270,7 @@ msgstr "Nicht dabei"
 msgid "Manage Event Series"
 msgstr "Eventserie verwalten"
 
+#. placeholder {0}: team?.name
 #: src/lib/components/diamondplanner/event/EventSeriesView.svelte
 msgid "Manage Event Series for {0}"
 msgstr "Eventserie für {0} verwalten"
@@ -2257,6 +2306,7 @@ msgstr "<0/> Abgesagt"
 msgid "Only team members can participate in events."
 msgstr "Nur Teammitglieder können an Events teilnehmen."
 
+#. placeholder {0}: eventSeries.interval
 #: src/lib/components/diamondplanner/eventseries/EventSeriesListItem.svelte
 msgid "every {0} days"
 msgstr "alle {0} Tage"
@@ -2273,10 +2323,12 @@ msgstr "Serienende nach:"
 msgid "Event Duration:"
 msgstr "Veranstaltungsdauer:"
 
+#. placeholder {0}: eventSeries.duration
 #: src/lib/components/diamondplanner/eventseries/EventSeriesListItem.svelte
 msgid "P{0}M"
 msgstr "P{0}M"
 
+#. placeholder {0}: eventSeries.duration
 #: src/lib/components/diamondplanner/eventseries/EventSeriesListItem.svelte
 msgid "{0} Minutes"
 msgstr "{0} Minuten"
@@ -2293,6 +2345,8 @@ msgstr "Zuletzt aktualisiert:"
 msgid "Comment/Reason:"
 msgstr "Kommentar/Grund:"
 
+#. placeholder {0}: participation?.expand?.user?.first_name
+#. placeholder {1}: participation?.expand?.user?.last_name
 #: src/lib/components/diamondplanner/event/IndividualParticipationEditButton.svelte
 msgid ""
 "Edit participation data\n"
@@ -2309,6 +2363,7 @@ msgstr "Anwesenheitsstatistik"
 msgid "Events where you did not select anything are counted as \"out\"."
 msgstr "Veranstaltungen, bei denen du nichts ausgewählt hast, werden als \"Nicht dabei\" gezählt."
 
+#. placeholder {0}: title
 #: src/lib/components/diamondplanner/stats/AttendanceTotalStatsBlock.svelte
 msgid "Totals - {0}"
 msgstr "Summen - {0}"
@@ -2327,6 +2382,7 @@ msgstr ""
 msgid "Setup Games Import"
 msgstr "Spiele-Import einrichten"
 
+#. placeholder {0}: team.name
 #: src/lib/components/diamondplanner/team/TeamAdminSection.svelte
 msgid "Games Import Setup for {0}"
 msgstr "Spiele-Import-Einrichtung für {0}"
@@ -2369,6 +2425,7 @@ msgstr "Gefahrenzone"
 msgid "Delete Team"
 msgstr "Team löschen"
 
+#. placeholder {0}: uniformSet.name
 #: src/lib/components/diamondplanner/uniformset/UniformSetInfoCard.svelte
 msgid "Edit Uniform Set \"{0}\""
 msgstr "Uniformsatz \"{0}\" bearbeiten"
@@ -2423,14 +2480,20 @@ msgstr "E-Mail-Adresse"
 msgid "Edit User Data:"
 msgstr "Benutzerdaten bearbeiten:"
 
+#. placeholder {0}: model.first_name
+#. placeholder {1}: model.last_name
 #: src/lib/components/diamondplanner/user/UserDataCard.svelte
 msgid "Change email address for {0} {1}"
 msgstr "E-Mail-Adresse für {0} {1} ändern"
 
+#. placeholder {0}: model.first_name
+#. placeholder {1}: model.last_name
 #: src/lib/components/diamondplanner/user/UserDataCard.svelte
 msgid "Edit User Data for {0} {1}"
 msgstr "Benutzerdaten für {0} {1} bearbeiten"
 
+#. placeholder {0}: user?.first_name
+#. placeholder {1}: user?.last_name
 #: src/routes/(protected)/stats/[user]/+page.svelte
 msgid "Stats for {0} {1}"
 msgstr "Statistiken für {0} {1}"
@@ -2475,6 +2538,7 @@ msgstr "Offizielle Details"
 msgid "Close"
 msgstr "Schließen"
 
+#. placeholder {0}: match.match_id
 #: src/routes/gamecenter/game-detail/[id]/+page.svelte
 msgid "Details zu Spiel {0}"
 msgstr "Details zum Spiel {0}"
@@ -2496,6 +2560,7 @@ msgstr "Spielbericht"
 msgid "No Box Score available."
 msgstr "Kein Boxscore verfügbar."
 
+#. placeholder {0}: error.message
 #: src/routes/gamecenter/game-detail/[id]/+page.svelte
 msgid "error loading boxscore: {0}"
 msgstr "Fehler beim Laden des Boxscores: {0}"
@@ -2504,6 +2569,7 @@ msgstr "Fehler beim Laden des Boxscores: {0}"
 msgid "No Game Report available."
 msgstr "Kein Spielbericht verfügbar."
 
+#. placeholder {0}: error.message
 #: src/routes/gamecenter/game-detail/[id]/+page.svelte
 msgid "error loading Game Report: {0}"
 msgstr "Fehler beim Laden des Spielberichts: {0}"
@@ -2516,6 +2582,8 @@ msgstr "Hinweis"
 msgid "Sharing games does not work on Firefox."
 msgstr "Das Teilen von Spielen funktioniert nicht in Firefox."
 
+#. placeholder {0}: data.leagueGroup.name
+#. placeholder {1}: data.leagueGroup.season
 #: src/routes/ligen/[id]/stats/+page.svelte
 msgid "Leaderboards for {0} ({1})"
 msgstr "Bestenlisten für {0} ({1})"
@@ -2524,6 +2592,7 @@ msgstr "Bestenlisten für {0} ({1})"
 msgid "Team:"
 msgstr "Team:"
 
+#. placeholder {0}: $announcement.link
 #: src/routes/(protected)/account/announcements/[announcement]/+page.svelte
 msgid "Link associated with this announcement: {0}"
 msgstr "Mit dieser Ankündigung verknüpfter Link: {0}"
@@ -2541,14 +2610,17 @@ msgstr "Admin-Optionen"
 msgid "Delete Announcement"
 msgstr "Ankündigung löschen"
 
+#. placeholder {0}: club.name
 #: src/routes/(protected)/account/clubs/[club]/locations/+page.svelte
 msgid "All configured locations for {0}, including baseball fields and other venues."
 msgstr "Alle konfigurierten Standorte für {0}, einschließlich Baseballfelder und anderer Veranstaltungsorte."
 
+#. placeholder {0}: club.name
 #: src/routes/(protected)/account/clubs/[club]/locations/+page.svelte
 msgid "{0} - Locations"
 msgstr "{0} - Standorte"
 
+#. placeholder {0}: club.name
 #: src/routes/(protected)/account/clubs/[club]/+page.svelte
 msgid "Club overview page for the {0} with info about teams and uniform sets."
 msgstr "Vereinsübersichtsseite für {0} mit Informationen zu Teams und Uniformsätzen."
@@ -2643,10 +2715,12 @@ msgstr "Links"
 msgid "Player List"
 msgstr "Spielerliste"
 
+#. placeholder {0}: data.team.name
 #: src/routes/(protected)/account/team/[id]/members/+page.svelte
 msgid "Team member list for {0}."
 msgstr "Teammitgliederliste für {0}."
 
+#. placeholder {0}: data.team.name
 #: src/routes/(protected)/account/team/[id]/members/+page.svelte
 msgid "Team members for Team \"{0}\""
 msgstr "Teammitglieder für Team \"{0}\""
@@ -2705,3 +2779,32 @@ msgid ""
 "participation statistics. If you want to change a long-running practice series, end the previous one by\n"
 "setting the end date accordingly and create a new series."
 msgstr "Beim Bearbeiten einer Veranstaltungsreihe können nur bestimmte Felder geändert werden, da die Bearbeitung vergangener Veranstaltungen die Teilnehmerstatistiken beeinflussen würde. Wenn du eine längere Serie ändern möchtest, beende die vorherige, indem du das Enddatum entsprechend festlegst und erstelle eine neue Serie."
+
+#. placeholder {0}: modelName
+#: src/lib/service/ToastController.svelte.ts
+msgid "An error occurred while saving {0} data."
+msgstr ""
+
+#: src/lib/components/meta/Footer.svelte
+msgid "text-primary-500"
+msgstr ""
+
+#: src/lib/components/meta/Footer.svelte
+msgid "https://svelte.dev/"
+msgstr ""
+
+#: src/lib/components/meta/Footer.svelte
+msgid "_blank"
+msgstr ""
+
+#: src/lib/components/meta/Footer.svelte
+msgid "w-6"
+msgstr ""
+
+#: src/lib/components/meta/Footer.svelte
+msgid "#ff3e00"
+msgstr ""
+
+#: src/lib/components/meta/Footer.svelte
+msgid "flex justify-end items-center gap-2"
+msgstr ""
