--- a/src/locales/pl.po
+++ b/src/locales/pl.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-09-12T16:35:43.595Z\n"
-"PO-Revision-Date: 2025-09-21T11:10:12.519Z\n"
+"PO-Revision-Date: 2025-09-21T17:03:06.394Z\n"
 "Last-Translator: \n"
 "Language: pl\n"
 "Language-Team: \n"
@@ -236,6 +236,8 @@ msgstr "Zdjęcie profilowe <0/>"
 msgid "Selected file:"
 msgstr "Wybrany plik:"
 
+#. placeholder {0}: file.name
+#. placeholder {1}: file.size
 #: src/lib/auth/UserDetailsForm.svelte
 msgid "{0} ({1} bytes)"
 msgstr "{0} ({1} bajtów)"
@@ -426,6 +428,20 @@ msgstr "Ligi"
 msgid "Loading Leagues..."
 msgstr "Ładowanie lig..."
 
+#. placeholder {0}: error.message
+#. placeholder {0}: error.message
+#. placeholder {0}: error.message
+#. placeholder {0}: error.message
+#. placeholder {0}: error.message
+#. placeholder {0}: error.message
+#. placeholder {0}: error.message
+#. placeholder {0}: error.message
+#. placeholder {0}: error.message
+#. placeholder {0}: error.message
+#. placeholder {0}: error.message
+#. placeholder {0}: error.message
+#. placeholder {0}: error.message
+#. placeholder {0}: error.message
 #: src/routes/ligen/+page.svelte
 #: src/routes/teams/+page.svelte
 #: src/routes/club/officials/+page.svelte
@@ -471,6 +487,7 @@ msgstr "Dane na ligę"
 msgid "A single team can be associated to several leagues per season in BSM."
 msgstr "W BSM jeden zespół może być powiązany z kilkoma ligami w sezonie."
 
+#. placeholder {0}: favoriteTeam?.team.name
 #: src/routes/favorite/+page.svelte
 msgid "The team \"{0}\" does not have a league entry in this league."
 msgstr "Drużyna \"{0}\" nie ma wpisu do tej ligi."
@@ -520,6 +537,7 @@ msgstr "Nie znaleziono danych."
 msgid "Loading..."
 msgstr "Ładowanie..."
 
+#. placeholder {0}: error.message
 #: src/routes/favorite/+page.svelte
 msgid "Error: {0}"
 msgstr "Błąd: {0}"
@@ -573,6 +591,7 @@ msgstr "Liczba komentarzy:"
 msgid "Read more"
 msgstr "Czytaj więcej"
 
+#. placeholder {0}: teamName
 #: src/lib/components/boxscore/MatchBoxscoreOffensiveTable.svelte
 msgid "{0} (Batters)"
 msgstr "{0} (Odbijający)"
@@ -616,6 +635,7 @@ msgstr "AVG"
 msgid "OPS"
 msgstr "OPS"
 
+#. placeholder {0}: teamName
 #: src/lib/components/boxscore/MatchBoxscorePitchingTable.svelte
 msgid "{0} (Pitchers)"
 msgstr "{0} (Miotacze)"
@@ -973,6 +993,8 @@ msgstr "<0/> Ustaw jako administratora"
 msgid "<0/> Remove"
 msgstr "<0/> Usuń"
 
+#. placeholder {0}: row.first_name + " " + row.last_name
+#. placeholder {1}: team.name
 #: src/lib/components/datatable/TeamMembersTableContent.svelte
 msgid "Are you sure you wish to remove \"{0}\" from \"{1}\"?"
 msgstr "Czy na pewno chcesz usunąć „{0}” z „{1}”?"
@@ -1032,10 +1054,12 @@ msgstr "Pokaż serię playoff"
 msgid "Playoff Series"
 msgstr "Seria playoff"
 
+#. placeholder {0}: playoffSeries.leading_team.name
 #: src/lib/components/favorite/PlayoffSheet.svelte
 msgid "{0} lead series"
 msgstr "{0} prowadzi w serii"
 
+#. placeholder {0}: playoffSeries.leading_team.name
 #: src/lib/components/favorite/PlayoffSheet.svelte
 msgid "{0} win series"
 msgstr "{0} wygrywa serię"
@@ -1044,6 +1068,7 @@ msgstr "{0} wygrywa serię"
 msgid "Series tied"
 msgstr "Seria remisowa"
 
+#. placeholder {0}: playoffSeries.series_length
 #: src/lib/components/favorite/PlayoffSheet.svelte
 msgid "Length of series: Best of {0}"
 msgstr "Długość serii: Najlepszy z {0}"
@@ -1089,6 +1114,7 @@ msgstr "Edytuj ogłoszenie"
 msgid "Create new"
 msgstr "Utwórz nowy"
 
+#. placeholder {0}: form?.title
 #: src/lib/components/forms/AnnouncementForm.svelte
 msgid "Edit Announcement \"{0}\""
 msgstr "Edytuj ogłoszenie „{0}”"
@@ -1176,6 +1202,7 @@ msgstr "Edytuj klub"
 msgid "Create a Club"
 msgstr "Utwórz klub"
 
+#. placeholder {0}: form?.name
 #: src/lib/components/forms/ClubForm.svelte
 msgid "Edit Club \"{0}\""
 msgstr "Edytuj klub „{0}”"
@@ -1243,10 +1270,12 @@ msgstr "Status <0><0>Obecny</0> <1>Może</1> <2>Nieobecny</2></0>"
 msgid "Event Series"
 msgstr "Seria wydarzeń"
 
+#. placeholder {0}: eventSeries.title
 #: src/lib/components/forms/EventSeriesForm.svelte
 msgid "Edit Event Series \"{0}\""
 msgstr "Edytuj serię wydarzeń „{0}”"
 
+#. placeholder {0}: team.name
 #: src/lib/components/forms/EventSeriesForm.svelte
 msgid "Create new Event Series for {0}"
 msgstr "Utwórz nową serię wydarzeń dla {0}"
@@ -1306,6 +1335,7 @@ msgstr "Drużyna"
 msgid "Edit Team"
 msgstr "Edytuj Drużynę"
 
+#. placeholder {0}: form?.name
 #: src/lib/components/forms/TeamForm.svelte
 msgid "Edit Team \"{0}\""
 msgstr "Edytuj Drużynę \"{0}\""
@@ -1352,6 +1382,7 @@ msgstr "Członek"
 msgid "Event"
 msgstr "Wydarzenie"
 
+#. placeholder {0}: form?.title
 #: src/lib/components/forms/EventForm.svelte
 msgid "Edit Event \"{0}\""
 msgstr "Edytuj wydarzenie „{0}”"
@@ -1496,6 +1527,9 @@ msgstr "Gry importowane z BSM w bazie danych:"
 msgid "Show leagues for"
 msgstr "Pokaż ligi dla"
 
+#. placeholder {0}: error.message
+#. placeholder {0}: error.message
+#. placeholder {0}: error.message
 #: src/lib/components/forms/TeamGamesModal.svelte
 #: src/lib/components/match/CurrentMatchBlock.svelte
 #: src/routes/ligen/[id]/stats/+page.svelte
@@ -1536,6 +1570,7 @@ msgstr "Otwórz w Mapach Apple"
 msgid "Location"
 msgstr "Lokalizacja"
 
+#. placeholder {0}: form?.address_addon ?? form?.internal_name
 #: src/lib/components/forms/LocationForm.svelte
 msgid "Edit Location \"{0}\""
 msgstr "Edytuj Lokalizację \"{0}\""
@@ -1836,10 +1871,12 @@ msgstr "Występ poza konkursem (aK):"
 msgid "Add Members"
 msgstr "Dodaj Członków"
 
+#. placeholder {0}: team.name
 #: src/lib/components/team/TeamAddMemberButton.svelte
 msgid "Add Members to team \"{0}\""
 msgstr "Dodaj Członków do drużyny \"{0}\""
 
+#. placeholder {0}: club.name
 #: src/lib/components/team/TeamAddMemberButton.svelte
 msgid "Select all {0} members that should be added to the team."
 msgstr "Wybierz wszystkich {0} członków, którzy powinni zostać dodani do drużyny."
@@ -1852,6 +1889,7 @@ msgstr "Wybierz Drużynę:"
 msgid "All Leagues"
 msgstr "Wszystkie Ligi"
 
+#. placeholder {0}: modelName
 #: src/lib/components/utility/DeleteButton.svelte
 msgid "Are you sure you wish to delete this {0}? In most cases, data cannot be recovered after deletion. Please be certain."
 msgstr "Czy na pewno chcesz usunąć ten {0}? W większości przypadków danych nie można odzyskać po usunięciu. Proszę się upewnić."
@@ -1900,10 +1938,12 @@ msgstr "Zmiany Rozegrane"
 msgid "Fielding Average"
 msgstr "Średnia Skuteczność Gry w Polu"
 
+#. placeholder {0}: itemName
 #: src/lib/components/utility/MultiSelectCombobox.svelte
 msgid "You cannot remove the last {0}!"
 msgstr "Nie możesz usunąć ostatniego {0}!"
 
+#. placeholder {0}: itemName
 #: src/lib/components/utility/MultiSelectCombobox.svelte
 msgid "Select to add as {0}:"
 msgstr "Wybierz, aby dodać jako {0}:"
@@ -1920,6 +1960,7 @@ msgstr "Dane Gracza"
 msgid "Edit Player Data"
 msgstr "Edytuj Dane Gracza"
 
+#. placeholder {0}: `${authRecord.first_name} ${authRecord.last_name}`
 #: src/lib/components/forms/PlayerDataForm.svelte
 msgid "Edit Player Data for \"{0}\""
 msgstr "Edytuj Dane Gracza dla \"{0}\""
@@ -2054,6 +2095,8 @@ msgstr "Licencje Sędziowskie"
 msgid "Loading Licenses..."
 msgstr "Ładowanie Licencji..."
 
+#. placeholder {0}: batting.person?.first_name
+#. placeholder {1}: batting.person?.last_name
 #: src/routes/players/[id]/+page.svelte
 msgid "Player Profile for {0} {1}"
 msgstr "Profil Gracza dla {0} {1}"
@@ -2062,6 +2105,7 @@ msgstr "Profil Gracza dla {0} {1}"
 msgid "Profile Data"
 msgstr "Dane Profilowe"
 
+#. placeholder {0}: error.message
 #: src/routes/players/[id]/+page.svelte
 msgid "An error occurred fetching player data: {0}.<0/> The data source might be temporarily unavailable, please try again later."
 msgstr "Wystąpił błąd podczas pobierania danych gracza: {0}.<0/> Źródło danych może być tymczasowo niedostępne, spróbuj ponownie później."
@@ -2071,6 +2115,8 @@ msgstr "Wystąpił błąd podczas pobierania danych gracza: {0}.<0/> Źródło d
 msgid "Stats"
 msgstr "Statystyki"
 
+#. placeholder {0}: clubTeam.team.name
+#. placeholder {1}: clubTeam.team.season
 #: src/routes/teams/[id]/+page.svelte
 msgid "{0} (Saison {1})"
 msgstr "{0} (Sezon {1})"
@@ -2087,6 +2133,7 @@ msgstr "Licencje Sędziów-Protokolantów"
 msgid "BSM-ID"
 msgstr "BSM-ID"
 
+#. placeholder {0}: data.teamName ?? "Team"
 #: src/routes/league_entries/[entry]/+page.svelte
 msgid "Stats for {0}"
 msgstr "Statystyki dla {0}"
@@ -2184,6 +2231,8 @@ msgstr "Komentarz/Powód:"
 msgid "Edit"
 msgstr "Edytuj"
 
+#. placeholder {0}: participation?.expand?.user?.first_name
+#. placeholder {1}: participation?.expand?.user?.last_name
 #: src/lib/components/diamondplanner/event/IndividualParticipationEditButton.svelte
 msgid ""
 "Edit participation data\n"
@@ -2196,6 +2245,7 @@ msgstr ""
 msgid "Manage Event Series"
 msgstr "Zarządzaj serią wydarzeń"
 
+#. placeholder {0}: team?.name
 #: src/lib/components/diamondplanner/event/EventSeriesView.svelte
 msgid "Manage Event Series for {0}"
 msgstr "Zarządzaj serią wydarzeń dla {0}"
@@ -2235,6 +2285,7 @@ msgstr ""
 msgid "Setup Games Import"
 msgstr "Skonfiguruj import meczów"
 
+#. placeholder {0}: team.name
 #: src/lib/components/diamondplanner/team/TeamAdminSection.svelte
 msgid "Games Import Setup for {0}"
 msgstr "Konfiguracja importu meczów dla {0}"
@@ -2277,6 +2328,7 @@ msgstr "Strefa zagrożenia"
 msgid "Delete Team"
 msgstr "Usuń drużynę"
 
+#. placeholder {0}: title
 #: src/lib/components/diamondplanner/stats/AttendanceTotalStatsBlock.svelte
 msgid "Totals - {0}"
 msgstr "Podsumowanie - {0}"
@@ -2289,6 +2341,7 @@ msgstr "Statystyki obecności"
 msgid "Events where you did not select anything are counted as \"out\"."
 msgstr "Wydarzenia, w których nic nie wybrałeś, są liczone jako \"nieobecne\"."
 
+#. placeholder {0}: uniformSet.name
 #: src/lib/components/diamondplanner/uniformset/UniformSetInfoCard.svelte
 msgid "Edit Uniform Set \"{0}\""
 msgstr "Edytuj zestaw strojów \"{0}\""
@@ -2335,10 +2388,14 @@ msgstr "adres e-mail"
 msgid "Edit User Data:"
 msgstr "Edytuj dane użytkownika:"
 
+#. placeholder {0}: model.first_name
+#. placeholder {1}: model.last_name
 #: src/lib/components/diamondplanner/user/UserDataCard.svelte
 msgid "Change email address for {0} {1}"
 msgstr "Zmień adres e-mail dla {0} {1}"
 
+#. placeholder {0}: model.first_name
+#. placeholder {1}: model.last_name
 #: src/lib/components/diamondplanner/user/UserDataCard.svelte
 msgid "Edit User Data for {0} {1}"
 msgstr "Edytuj dane użytkownika dla {0} {1}"
@@ -2351,6 +2408,7 @@ msgstr "Nie jesteś jeszcze członkiem żadnego klubu."
 msgid "Join a Club"
 msgstr "Dołącz do klubu"
 
+#. placeholder {0}: eventSeries.interval
 #: src/lib/components/diamondplanner/eventseries/EventSeriesListItem.svelte
 msgid "every {0} days"
 msgstr "co {0} dni"
@@ -2367,10 +2425,12 @@ msgstr "Seria kończy się po:"
 msgid "Event Duration:"
 msgstr "Czas trwania wydarzenia:"
 
+#. placeholder {0}: eventSeries.duration
 #: src/lib/components/diamondplanner/eventseries/EventSeriesListItem.svelte
 msgid "P{0}M"
 msgstr "P{0}M"
 
+#. placeholder {0}: eventSeries.duration
 #: src/lib/components/diamondplanner/eventseries/EventSeriesListItem.svelte
 msgid "{0} Minutes"
 msgstr "{0} minut"
@@ -2391,6 +2451,8 @@ msgstr "Ważna do"
 msgid "Relative Time"
 msgstr "Względny czas"
 
+#. placeholder {0}: user?.first_name
+#. placeholder {1}: user?.last_name
 #: src/routes/(protected)/stats/[user]/+page.svelte
 msgid "Stats for {0} {1}"
 msgstr "Statystyki dla {0} {1}"
@@ -2417,6 +2479,7 @@ msgstr "Softball"
 msgid "Sleeve Number"
 msgstr "Numer na rękawie"
 
+#. placeholder {0}: level
 #: src/lib/components/club/licenses/LicenseLevelIndicator.svelte
 msgid "License level {0}:"
 msgstr "Poziom licencji {0}:"
@@ -2470,6 +2533,7 @@ msgstr "Szczegóły boiska"
 msgid "How to get there"
 msgstr "Jak dojechać"
 
+#. placeholder {0}: match.match_id
 #: src/routes/gamecenter/game-detail/[id]/+page.svelte
 msgid "Details zu Spiel {0}"
 msgstr "Szczegóły meczu {0}"
@@ -2491,6 +2555,7 @@ msgstr "Raport z meczu"
 msgid "No Box Score available."
 msgstr "Brak dostępnych wyników szczegółowych."
 
+#. placeholder {0}: error.message
 #: src/routes/gamecenter/game-detail/[id]/+page.svelte
 msgid "error loading boxscore: {0}"
 msgstr "Błąd podczas ładowania wyników szczegółowych: {0}"
@@ -2499,6 +2564,7 @@ msgstr "Błąd podczas ładowania wyników szczegółowych: {0}"
 msgid "No Game Report available."
 msgstr "Brak dostępnego raportu z meczu."
 
+#. placeholder {0}: error.message
 #: src/routes/gamecenter/game-detail/[id]/+page.svelte
 msgid "error loading Game Report: {0}"
 msgstr "Błąd podczas ładowania raportu z meczu: {0}"
@@ -2535,6 +2601,7 @@ msgstr "Brak danych licencji z powodu błędu."
 msgid "Team:"
 msgstr "Drużyna:"
 
+#. placeholder {0}: $announcement.link
 #: src/routes/(protected)/account/announcements/[announcement]/+page.svelte
 msgid "Link associated with this announcement: {0}"
 msgstr "Link powiązany z tym ogłoszeniem: {0}"
@@ -2568,6 +2635,8 @@ msgstr "Mój udział"
 msgid "Official Details"
 msgstr "Szczegóły oficjela"
 
+#. placeholder {0}: data.leagueGroup.name
+#. placeholder {1}: data.leagueGroup.season
 #: src/routes/ligen/[id]/stats/+page.svelte
 msgid "Leaderboards for {0} ({1})"
 msgstr "Tabele liderów dla {0} ({1})"
@@ -2617,10 +2686,12 @@ msgstr "Lista graczy"
 msgid "Team Members"
 msgstr "Członkowie drużyny"
 
+#. placeholder {0}: data.team.name
 #: src/routes/(protected)/account/team/[id]/members/+page.svelte
 msgid "Team member list for {0}."
 msgstr "Lista członków drużyny dla {0}."
 
+#. placeholder {0}: data.team.name
 #: src/routes/(protected)/account/team/[id]/members/+page.svelte
 msgid "Team members for Team \"{0}\""
 msgstr "Członkowie drużyny \"{0}\""
@@ -2629,14 +2700,17 @@ msgstr "Członkowie drużyny \"{0}\""
 msgid "Club Locations"
 msgstr "Lokalizacje klubu"
 
+#. placeholder {0}: club.name
 #: src/routes/(protected)/account/clubs/[club]/locations/+page.svelte
 msgid "All configured locations for {0}, including baseball fields and other venues."
 msgstr "Wszystkie skonfigurowane lokalizacje dla {0}, w tym boiska baseballowe i inne obiekty."
 
+#. placeholder {0}: club.name
 #: src/routes/(protected)/account/clubs/[club]/locations/+page.svelte
 msgid "{0} - Locations"
 msgstr "{0} - Lokalizacje"
 
+#. placeholder {0}: club.name
 #: src/routes/(protected)/account/clubs/[club]/+page.svelte
 msgid "Club overview page for the {0} with info about teams and uniform sets."
 msgstr "Strona przeglądowa klubu dla {0} z informacjami o drużynach i zestawach strojów."
@@ -2716,3 +2790,32 @@ msgstr ""
 "Podczas edycji serii wydarzeń można zmienić tylko wybrane pola, ponieważ edycja minionych wydarzeń wpłynęłaby\n"
 "na statystyki uczestnictwa. Jeśli chcesz zmienić długotrwałą serię treningów, zakończ poprzednią, ustawiając odpowiednio\n"
 "datę zakończenia i utwórz nową serię."
+
+#. placeholder {0}: modelName
+#: src/lib/service/ToastController.svelte.ts
+msgid "An error occurred while saving {0} data."
+msgstr ""
+
+#: src/lib/components/meta/Footer.svelte
+msgid "text-primary-500"
+msgstr ""
+
+#: src/lib/components/meta/Footer.svelte
+msgid "https://svelte.dev/"
+msgstr ""
+
+#: src/lib/components/meta/Footer.svelte
+msgid "_blank"
+msgstr ""
+
+#: src/lib/components/meta/Footer.svelte
+msgid "w-6"
+msgstr ""
+
+#: src/lib/components/meta/Footer.svelte
+msgid "#ff3e00"
+msgstr ""
+
+#: src/lib/components/meta/Footer.svelte
+msgid "flex justify-end items-center gap-2"
+msgstr ""
